Bug 397192 - Discover crashes on close when I use "Manage <app>" feature with an app from AUR
Summary: Discover crashes on close when I use "Manage <app>" feature with an app from AUR
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (show other bugs)
Version: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
: 400841 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-08-05 22:10 UTC by Patrick Silva
Modified: 2018-11-08 12:18 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2018-08-05 22:10:00 UTC
I have some apps installed from aur (arch users repository).
When I search form some of them in the apps launcher, right click its entry and select "manage <app>", discover 5.13.4 opens and says "cannot open appstream://app.desktop". I close discover, plasma shows a crash notification.
Some apps from aur that produces the crash:
tixati torrent client
etcher (to create bootable usb sticks)
yarock music player
vokoscreen (screen recorder)

#0  0x00007ff89f39886b in raise () at /usr/lib/libc.so.6
#1  0x00007ff8a3b1229f in KCrash::defaultCrashHandler(int) () at /usr/lib/libKF5Crash.so.5
#2  0x00007ff89f3988f0 in <signal handler called> () at /usr/lib/libc.so.6
#3  0x00007ff89f39886b in raise () at /usr/lib/libc.so.6
#4  0x00007ff89f38340e in abort () at /usr/lib/libc.so.6
#5  0x00007ff899b21b76 in g_assertion_message () at /usr/lib/libglib-2.0.so.0
#6  0x00007ff899b21bdc in g_assertion_message_expr () at /usr/lib/libglib-2.0.so.0
#7  0x00007ff860d3d7d2 in  () at /usr/lib/libostree-1.so.1
#8  0x00007ff861cc2b05 in g_object_unref () at /usr/lib/libgobject-2.0.so.0
#9  0x00007ff8622be174 in  () at /usr/lib/libflatpak.so.0
#10 0x00007ff861cc2b05 in g_object_unref () at /usr/lib/libgobject-2.0.so.0
#11 0x00007ff8623052a7 in flatpak_installation_list_remote_refs_sync () at /usr/lib/libflatpak.so.0
#12 0x00007ff862305440 in flatpak_installation_list_installed_refs_for_update () at /usr/lib/libflatpak.so.0
#13 0x00007ff86278d181 in non-virtual thunk to QtConcurrent::RunFunctionTask<_GPtrArray*>::run() ()
    at /usr/lib/qt/plugins/discover/flatpak-backend.so
#14 0x00007ff89fb629f1 in  () at /usr/lib/libQt5Core.so.5
#15 0x00007ff89fb6ab45 in  () at /usr/lib/libQt5Core.so.5
#16 0x00007ff89bd39075 in start_thread () at /usr/lib/libpthread.so.0
#17 0x00007ff89f45a53f in clone () at /usr/lib/libc.so.6
Comment 1 Aleix Pol 2018-08-07 16:05:55 UTC
Git commit 2155003d054e75d173307360c81fea41890b590f by Aleix Pol.
Committed on 07/08/2018 at 16:02.
Pushed by apol into branch 'Plasma/5.12'.

PK: wait until we have fetched the packages that dont' come from appstream

M  +3    -3    discover/DiscoverObject.cpp
M  +2    -2    libdiscover/backends/PackageKitBackend/PackageKitBackend.cpp

https://commits.kde.org/discover/2155003d054e75d173307360c81fea41890b590f
Comment 2 Aleix Pol 2018-11-08 12:18:09 UTC
*** Bug 400841 has been marked as a duplicate of this bug. ***