PK: wait until we have fetched the packages that dont' come from appstream

BUG: 397192